# Shiok-Lah.

./: .gitignore  README.md
backend/: .env.example  agents.md  config.py  langgraph.json  langgraph_studio_render.md  main.py  pyproject.toml  test_interactive.py
backend/agents/: llm.py
backend/db/: models.py  session_store.py
backend/graph/: conversation_graph.py  state.py
backend/graph/nodes/: apply_suspicion.py  character_node.py  load_state.py  persist.py  preflight.py  suspicion_node.py  voice_node.py  win_check.py
backend/models/: npcs.py  schemas.py
backend/routes/: game.py  voice.py
backend/services/: context_manager.py  mood_engine.py  state_manager.py
godot/: asian_food_resized.png.import  icon.svg.import  index.html  project.godot
godot/assets/background_score/: swing_jazz.ogg.import
godot/assets/characters/: Adam_idle_anim_16x16.png.import  asianAunty.png.import  (+3 more)
godot/builds/: index.html
godot/scenes/: GameOverPopup.tscn  MoodIndicator.tscn  NPCDialogue.tscn  game.tscn  player.tscn  start_screen.tscn
godot/scripts/: DialogueManager.gd  DialogueManager.gd.uid  GameState.gd  GameState.gd.uid  MoodIndicator.gd  MoodIndicator.gd.uid  NPCDialogue.gd  NPCDialogue.gd.uid  auntie_siti_npc.gd  auntie_siti_npc.gd.uid  game_music_loop.gd  game_music_loop.gd.uid  game_over_popup.gd  game_over_popup.gd.uid  music_toggle_button.gd  music_toggle_button.gd.uid  npc_hint_bubble.gd  npc_hint_bubble.gd.uid  player.gd  player.gd.uid  start_screen.gd  start_screen.gd.uid  uncle_ah_kow.gd  uncle_ah_kow.gd.uid  uncle_robert_npc.gd  uncle_robert_npc.gd.uid
(+28 files in other folders)
